# metaltile

./: CONTRIBUTING.md  Cargo.toml  KERNEL_AUDIT.md  Makefile  README.md  SPECIALIZE_SPEC.md  codecov.yml  rust-toolchain.toml  tile.toml
.github/: PULL_REQUEST_TEMPLATE.md
crates/metaltile/: Cargo.toml
crates/metaltile-cli/: Cargo.toml  README.md  build.rs
crates/metaltile-cli/src/: bench_types.rs  config.rs  error.rs  harness.rs  main.rs  project_runner.rs  run_spec.rs  suite_printer.rs  term.rs
crates/metaltile-cli/src/cmd/: bench.rs  build.rs  clean.rs  config.rs  device.rs  diff.rs  emit.rs  init.rs  inspect.rs  mod.rs  profile.rs  snap.rs  test.rs  update.rs
crates/metaltile-codegen/: Cargo.toml  README.md
crates/metaltile-codegen/src/: backend.rs  emit.rs  error.rs  kernel_registry.rs  lib.rs  msl.rs
crates/metaltile-codegen/src/cuda/: mod.rs
crates/metaltile-codegen/src/hip/: mod.rs
crates/metaltile-codegen/src/msl/: emit_block.rs  features.rs  fused.rs  matmul.rs  mod.rs  preamble.rs  reduce.rs
crates/metaltile-codegen/src/passes/: algebraic_simplify.rs  block_util.rs  const_fold.rs  copy_prop.rs  cse.rs  dead_store_elim.rs  dead_value_elim.rs  fusion.rs  if_conversion.rs  kernel_inline.rs  licm.rs  mod.rs  occupancy.rs  register_estimate.rs  remap.rs  schedule.rs  tile_lowering.rs  type_check.rs  unroll.rs  value_sink.rs  vectorize.rs
crates/metaltile-codegen/src/spirv/: mod.rs
crates/metaltile-codegen/tests/: msl_snapshots.rs
crates/metaltile-codegen/tests/snapshots/: msl_snapshots__bf16_param_only_compat_emits_preamble.snap  msl_snapshots__bf16_param_only_native_emits_native_type.snap  msl_snapshots__cast_chain_bf16_compat.snap  msl_snapshots__reduction_sum_snapshot_default.snap  msl_snapshots__reduction_sum_snapshot_small_tpg.snap
crates/metaltile-emit/: Cargo.toml
crates/metaltile-emit/src/: main.rs
crates/metaltile-runtime/: Cargo.toml  README.md  build.rs
crates/metaltile-runtime/src/: autotune.rs  capture.rs  context.rs  error.rs  gpu_family.rs  lib.rs
crates/metaltile-runtime/src/cache/: msl_cache.rs  pso_cache.rs
crates/metaltile-runtime/src/device/: metal_device.rs  mod.rs
crates/metaltile-runtime/src/dispatch/: buffer_plan.rs  chain_dispatch.rs  mod.rs  single_dispatch.rs  validate.rs
crates/metaltile-runtime/tests/: cuda_smoke.rs  hip_smoke.rs  vulkan_smoke.rs
crates/metaltile-std/: Cargo.toml  README.md  STYLE_GUIDE.md
crates/metaltile-std/examples/: pass_perf.rs
crates/metaltile-std/src/: bench_types.rs  error.rs  lib.rs  run_kernel.rs  run_spec.rs  runner.rs  spec.rs  stats.rs  utils.rs
crates/metaltile-std/src/ffai/: adain1d.rs  arg_reduce.rs  attn_head_gate.rs  audio_conv1d.rs  audio_conv1d_block_scaled.rs  aura_dequant_rotated.rs  aura_encode.rs  aura_flash_p1.rs  aura_flash_pass2.rs  aura_flash_sdpa.rs  aura_score.rs  aura_value.rs  avg_pool2d_nhwc.rs  axpy_scalar_inplace.rs  batched_4_block_scaled_qgemv.rs  batched_4_block_scaled_qmm.rs  batched_4_qgemv.rs  batched_4_qmm.rs  batched_qkv_block_scaled_qgemv.rs  batched_qkv_block_scaled_qmm.rs  batched_qkv_qgemv.rs  batched_qkv_qmm.rs  clamp_scalar.rs  conv1d_causal_step_silu_cast_many.rs  conv1d_dilated_transpose.rs  conv1d_transpose_depthwise.rs  conv2d.rs  conv2d_block_scaled.rs  conv2d_mma.rs  conv2d_mma_block_scaled.rs  conv3d.rs  conv3d_block_scaled.rs  conv3d_mma.rs  conv3d_mma_block_scaled.rs  depthwise_conv2d.rs  depthwise_conv2d_block_scaled.rs  depthwise_conv2d_nhwc.rs  dequant_gather.rs  dequant_gather_block_scaled.rs  dequant_gemv.rs  (+126 more)
crates/metaltile-std/src/mlx/: arange.rs  arg_reduce.rs  binary.rs  binary_two.rs  block_scaled_dequant.rs  block_scaled_matmul.rs  block_scaled_mma.rs  block_scaled_moe.rs  block_scaled_qmm.rs  block_scaled_qmm_mpp.rs  block_scaled_qmm_nax.rs  clamped_swiglu.rs  copy.rs  fft.rs  fp_quantized.rs  fp_quantized_mma.rs  fp_quantized_nax.rs  fused_gate_activation.rs  gather_axis.rs  gemv.rs  gemv_masked.rs  hadamard.rs  hadamard_m.rs  indexing.rs  layer_norm.rs  logsumexp.rs  mod.rs  quantized.rs  quantized_mma_dynamic_m.rs  quantized_mpp.rs  quantized_mpp_int8.rs  quantized_nax.rs  quantized_nax_int8.rs  random.rs  reduce.rs  rms_norm.rs  rope.rs  scaled_dot_product_attention.rs  scan.rs  scatter_axis.rs  (+9 more)
crates/metaltile-std/src/probe/: mpp_matmul_smoke.rs
crates/metaltile-std/src/quant/: codec.rs  decode_kernels.rs  format.rs  gguf.rs  mod.rs
crates/metaltile-std/tests/: affine_int2_gpu_correctness.rs  affine_int356_quantize_gpu_correctness.rs  arange_gpu_correctness.rs  arg_reduce_gpu_correctness.rs  argmax_gpu_correctness.rs  audio_conv1d_gpu_correctness.rs  aura_dequant_rotated_gpu_correctness.rs  aura_encode_gpu_correctness.rs  aura_flash_gpu_correctness.rs  aura_flash_p1_causal_gpu_correctness.rs  aura_flash_sdpa_gpu_correctness.rs  aura_msl_snapshots.rs  aura_score_gpu_correctness.rs  aura_value_gpu_correctness.rs  batched_4_qgemv_gpu_correctness.rs  batched_4_qmm_gpu_correctness.rs  batched_qkv_qgemv_gpu_correctness.rs  batched_qkv_qmm_gpu_correctness.rs  binary_gpu_correctness.rs  binary_two_gpu_correctness.rs  bm64_vs_gemvrows_iq2xxs.rs  conv1d_causal_step_gpu_correctness.rs  conv2d_gpu_correctness.rs  conv3d_gpu_correctness.rs  copy_gpu_correctness.rs  cuda_bench_corpus.rs  cuda_kernel_corpus.rs  dequant_gemv_gpu_correctness.rs  dequant_gemv_indirect_wrappers.rs  dispatch_pinning_guard.rs  dsv4_partial_rope_rows_correctness.rs  dsv4_router_topk_correctness.rs  fft_gpu_correctness.rs  flash_quantized_sdpa_gpu_correctness.rs  fp_quantized_fp4_gpu_correctness.rs  fp_quantized_fp8_gpu_correctness.rs  fp_quantized_nax_gpu_correctness.rs  fused_gate_activation_gpu_correctness.rs  gated_delta_gpu_correctness.rs  gated_delta_prep_chunk_correctness.rs  (+128 more)
crates/metaltile-std/tests/common/: mod.rs
crates/metaltile-std/tests/snapshots/: aura_msl_snapshots__aura_dequant_rotated_int4_f32_msl.snap  aura_msl_snapshots__aura_encode_int4_f32_msl.snap  aura_msl_snapshots__aura_flash_p1_kb4_vb2_d128_f32_msl.snap  aura_msl_snapshots__aura_flash_pass2_d128_bf16_msl.snap  (+9 more)
crates/metaltile/src/: lib.rs  prelude.rs  test.rs
(+117 files in other folders)
