[workspace]
resolver = "2"
members = [
  "crates/metaltile-core",
  "crates/metaltile-macros",
  "crates/metaltile-codegen",
  "crates/metaltile-runtime",
  "crates/metaltile",
  "crates/metaltile-cli",
  "crates/metaltile-std",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/metaltile/metaltile"
homepage = "https://github.com/metaltile/metaltile"
documentation = "https://docs.rs/metaltile"

[workspace.dependencies]
# Internal
metaltile = { path = "crates/metaltile", version = "0.1.0" }
metaltile-core = { path = "crates/metaltile-core", version = "0.1.0" }
metaltile-macros = { path = "crates/metaltile-macros", version = "0.1.0" }
metaltile-codegen = { path = "crates/metaltile-codegen", version = "0.1.0" }
metaltile-runtime = { path = "crates/metaltile-runtime", version = "0.1.0" }
metaltile-std = { path = "crates/metaltile-std", version = "0.1.0" }

# External
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
thiserror = "2"
smallvec = { version = "1", features = ["serde"] }
arrayvec = "0.7"
parking_lot = "0.12"
rustc-hash = "2"
bytemuck = "1"
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
criterion = { version = "0.8", features = ["html_reports"] }
inventory = "0.3"
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }

# Apple Metal FFI. Workspace-deduped because metaltile-runtime and
# metaltile-std previously declared overlapping-but-drifting feature
# sets — that bit us at link time when one crate's feature was the
# other's hard requirement.
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-metal = { version = "0.3", features = [
    "MTLBuffer",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLDataType",
    "MTLDevice",
    "MTLFunctionConstantValues",
    "MTLLibrary",
] }

regex = "1"
glob = "0.3"

# Test-only
trybuild = "1"
insta = { version = "1.43", default-features = false }

# Workspace-wide lints. `arc_with_non_send_sync` catches the
# `Arc<Retained<T>>`-in-thread-local pattern the playbook flags as
# a guaranteed `Rc` win — the lint is preventive here (no live sites
# today) but cheap to keep on.
[workspace.lints.clippy]
arc_with_non_send_sync = "warn"

[profile.release]
# metaltile-std is `publish = true`, so workspace-wide `lto = "fat"` +
# `codegen-units = 1` would balloon downstream caller build times 5-10×
# (rustls caveat in the playbook). Keep release downstream-friendly;
# push the aggressive inlining settings into `[profile.bench]` where
# the perf measurement actually wants them.
codegen-units = 16
panic = "abort"

# CI profile: same correctness as release but skips fat-LTO and forces
# max parallelism so cold builds finish in roughly half the time.
# Bench numbers are unaffected — kernels are Metal shaders compiled by
# xcrun, not Rust code, so Rust LTO settings have no bearing on them.
[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 16

# Bench profile: opt for absolute speed for steady-state measurements.
# `debug = true` keeps frame pointers + DWARF available for Instruments
# / Metal Frame Capture without hurting runtime.
[profile.bench]
inherits = "release"
lto = "fat"
codegen-units = 1
debug = true
