[package]
name = "metaltile-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MetalTile CLI — benchmark, test, and inspect GPU kernels"
keywords = ["metal", "gpu", "apple-silicon", "benchmark", "cli"]
categories = ["hardware-support", "development-tools"]
publish = false

[[bin]]
name = "tile"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
metaltile.workspace = true
metaltile-core.workspace = true
metaltile-codegen.workspace = true
metaltile-std.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
toml.workspace = true
clap.workspace = true
clap_complete.workspace = true
anstyle = "1"
anstream = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
regex.workspace = true
glob.workspace = true
