[package]
name = "metaltile-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Metal Shading Language (MSL) code generator for MetalTile kernels"
keywords = ["metal", "gpu", "apple-silicon", "codegen", "msl"]
categories = ["compilers", "hardware-support"]
publish = false

[lints]
workspace = true

[dependencies]
metaltile-core.workspace = true
inventory.workspace = true
thiserror.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
