[package]
name = "metaltile-emit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Build-time tool that emits a kernels.metallib + manifest + Swift wrappers from a registry of #[kernel] definitions"
keywords = ["metal", "gpu", "apple-silicon", "codegen", "swift"]
categories = ["development-tools::build-utils"]
publish = false

[dependencies]
metaltile.workspace = true
metaltile-core.workspace = true
metaltile-codegen.workspace = true
metaltile-macros.workspace = true
metaltile-runtime.workspace = true
metaltile-std.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[[bin]]
name = "metaltile-emit"
path = "src/main.rs"
