[package]
name = "metaltile-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Apple Metal runtime dispatch for MetalTile GPU kernels"
keywords = ["metal", "gpu", "apple-silicon", "runtime", "dispatch"]
categories = ["compilers", "hardware-support"]
publish = false

[lints]
workspace = true

[features]
# CUDA/NVIDIA backend (NVRTC + Driver API). Opt-in; requires the CUDA
# toolkit + an NVIDIA driver at link/run time. Off by default so the
# macOS Metal path stays zero-config. See specs/CUDA_BACKEND_SPEC.md.
cuda = []

[dependencies]
metaltile-core.workspace = true
metaltile-codegen.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-metal.workspace = true
objc2-foundation.workspace = true
