[package]
name = "metaltile-std"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MetalTile kernel standard library — benchmark metadata and type definitions"
publish = true

build = "bin/build.rs"

[lints]
workspace = true

[features]
# Run the registered #[test_kernel] corpus on the CUDA backend
# (tests/cuda_kernel_corpus.rs). Forwards to metaltile-runtime/cuda.
cuda = ["metaltile-runtime/cuda"]
# Run the registered #[test_kernel] corpus on the HIP / ROCm backend
# (tests/hip_kernel_corpus.rs). Forwards to metaltile-runtime/hip.
hip = ["metaltile-runtime/hip"]
# Run the registered #[test_kernel] corpus on the Vulkan / SPIR-V backend
# (tests/vulkan_kernel_corpus.rs). Forwards to metaltile-runtime/vulkan.
vulkan = ["metaltile-runtime/vulkan"]

[[bin]]
name = "__tile_runner"
path = "bin/runner.rs"

[dependencies]
metaltile.workspace = true
half.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
# AURA MSL snapshot tests (tests/aura_msl_snapshots.rs).
insta.workspace = true
bytemuck.workspace = true
# GPU dispatch in probe / GPU-correctness integration tests.
metaltile-runtime.workspace = true
