[package]
name = "metaltile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Rust DSL for writing Apple Metal GPU kernels — write once, run fast on Apple Silicon"
keywords = ["metal", "gpu", "apple-silicon", "dsl", "shader"]
categories = ["compilers", "hardware-support"]
publish = false

[lints]
workspace = true

[dependencies]
metaltile-core.workspace = true
metaltile-macros.workspace = true
metaltile-codegen.workspace = true
metaltile-runtime.workspace = true
inventory.workspace = true
serde.workspace = true
bytemuck.workspace = true
rayon.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-metal.workspace = true
objc2-foundation.workspace = true

[dev-dependencies]
trybuild.workspace = true
